# ImageCollector

./: .gitignore  CMakeLists.txt  README.md  feature.h  imagecollector.cpp  imagecollector.h
